# ip-machine-type

./: .gitignore  README.md  check-ip.bat  check-ip.sh  pyproject.toml  requirements.txt
ip_machine_type/: __init__.py  classifier.py  cli.py
